# urikvm

./: .gitignore  README.md  goal.yaml  pyproject.toml  urikvm.markpact.md
data/: events.jsonl
markpacts/: urikvm.markpact.md
tests/: test_import.py  test_manifest.py  test_runtime.py  test_wayland_capture.py
urikvm/: handlers.py  manifest.yaml
